--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -99,16 +99,20 @@
 @media only screen and (max-width: 767px) {
   /* mobile navigation
    -------------------------------------------------------------------- */
+
   #nav-wrap {
-    font: 12px 'opensans-bold', sans-serif;
+    display: none;
+  }
+  #mobile-nav-wrap {
+    font: 12px 'Montserrat', sans-serif;
     background: transparent !important;
     letter-spacing: 1.5px;
     width: auto;
     position: fixed;
     top: 0;
-    right: 0;
+    /* right: 0; */
   }
-  #nav-wrap > a {
+  #mobile-nav-wrap > .mobile-btn button {
     width: 48px;
     height: 48px;
     text-align: left;
@@ -116,37 +120,36 @@
     position: relative;
     border: none;
     float: right;
-
     font: 0/0 a;
     text-shadow: none;
     color: transparent;
-
     position: relative;
     top: 0px;
     right: 30px;
   }
 
-  #nav-wrap > a:before,
-  #nav-wrap > a:after {
+  #mobile-nav-wrap > .mobile-btn:before,
+  #mobile-nav-wrap > .mobile-btn:after {
     position: absolute;
-    border: 2px solid #fff;
+    border: 2px solid #00ffff;
     top: 35%;
     left: 25%;
     right: 25%;
     content: '';
   }
-  #nav-wrap > a:after {
+  #mobile-nav-wrap > button:after {
     top: 60%;
+    border: 2px solid #00ffff;
   }
 
   /* toggle buttons */
-  #nav-wrap:not(:target) > a:first-of-type,
-  #nav-wrap:target > a:last-of-type {
+  #mobile-nav-wrap:not(:target) > a:first-of-type,
+  #mobile-nav-wrap:target > a:last-of-type {
     display: block;
   }
 
   /* hide menu panel */
-  #nav-wrap ul#nav {
+  #mobile-nav-wrap ul#nav {
     height: auto;
     display: none;
     clear: both;
@@ -158,34 +161,6 @@
     right: 0;
   }
 
-  /* display menu panels */
-  #nav-wrap:target > ul#nav {
-    display: block;
-    padding: 30px 20px 48px 20px;
-    background: #1f2024;
-    margin: 0 30px;
-    clear: both;
-  }
-
-  ul#nav li {
-    display: block;
-    height: auto;
-    margin: 0 auto;
-    padding: 0 4%;
-    text-align: left;
-    border-bottom: 1px solid #2d2e34;
-    border-bottom-style: dotted;
-  }
-
-  ul#nav li a {
-    display: block;
-    margin: 0;
-    padding: 0;
-    margin: 12px 0;
-    line-height: 16px; /* reset line-height from 48px */
-    border: none;
-  }
-
   /* Header Styles
    -------------------------------------------------------------------- */
   header .banner {
@@ -193,10 +168,10 @@
     padding-top: 6px;
   }
   header .banner-text h1 {
-    font: 68px/1.1em 'opensans-bold', sans-serif;
+    font: 68px/1.1em 'Montserrat', sans-serif;
   }
   header .banner-text h3 {
-    font: 16px/1.9em 'librebaskerville-regular', serif;
+    font: 16px/1.9em 'Montserrat', sans-serif;
     width: 85%;
   }
   header .banner-text hr {
@@ -233,6 +208,30 @@
     padding-right: 30px;
   }
 
+  #about .address {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0px;
+  }
+
+  .address .left-address {
+    display: flex;
+    flex-direction: column;
+  }
+  .address .right-address {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0px;
+  }
+
+  #about {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 10px;
+    justify-content: center;
+  }
+
   /* Resume Section
    --------------------------------------------------------------------- */
   #resume .header-col {
@@ -255,13 +254,46 @@
     width: 100%;
   }
 
+  /*----------------------------------------------*/
+  /*	Skill Bars
+/*----------------------------------------------*/
+
+  .skills-section {
+    display: flex;
+    justify-content: center;
+    /* padding: 0 20px; */
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .skills {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .single-skill {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    flex: 1 1 100px;
+    max-width: 100px;
+    margin-bottom: 30px;
+  }
+
+  .single-skill img {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+  }
   /* Call To Action Section
    /* ----------------------------------------------------------------- */
   #call-to-action {
     text-align: center;
   }
   #call-to-action h1 {
-    font: 16px/24px 'opensans-bold', sans-serif;
+    font: 16px/24px 'Montserrat', sans-serif;
     text-align: center;
     margin-bottom: 30px;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
@@ -291,7 +323,7 @@
     text-align: center;
   }
   #testimonials h1 {
-    font: 16px/24px 'opensans-bold', sans-serif;
+    font: 16px/24px 'Montserrat', sans-serif;
     text-align: center;
     margin-bottom: 30px;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
@@ -325,7 +357,7 @@
     margin-bottom: 12px;
   }
   #contact .section-head h1 {
-    font: 16px/24px 'opensans-bold', sans-serif;
+    font: 16px/24px 'Montserrat', sans-serif;
     text-align: center;
     margin-bottom: 30px;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
@@ -400,22 +432,25 @@
 @media only screen and (max-width: 480px) {
   /* mobile navigation
    -------------------------------------------------------------------- */
-  #nav-wrap ul#nav {
+  #mobile-nav-wrap ul#nav {
     width: auto;
     float: none;
   }
 
+  #nav-wrap {
+    display: none;
+  }
   /* header styles
    -------------------------------------------------------------------- */
   header .banner {
     padding-top: 24px;
   }
   header .banner-text h1 {
-    font: 40px/1.1em 'opensans-bold', sans-serif;
+    font: 40px/1.1em 'Montserrat', sans-serif;
     margin: 0 auto 24px auto;
   }
   header .banner-text h3 {
-    font: 14px/1.9em 'librebaskerville-regular', sans-serif;
+    font: 14px/1.9em 'Montserrat', sans-serif;
     width: 90%;
   }
 
@@ -436,5 +471,206 @@
   }
   footer .social-links li {
     margin-left: 14px;
+  }
+
+  #mobile-nav-wrap button {
+    display: block;
+    position: fixed;
+    background: #121415;
+    margin: 12px;
+    right: 0;
+    height: 30px;
+  }
+  #mobile-nav-wrap {
+    display: block;
+  }
+
+  #mobile-nav-wrap > .mobile-btn:before,
+  #mobile-nav-wrap > .mobile-btn:after {
+    position: absolute;
+    border: 1px solid #00ffff;
+    /* top: 35%;
+    left: 25%;
+    right: 25%; */
+    content: '';
+  }
+  #mobile-nav-wrap > .mobile-btn:after {
+    top: 60%;
+    border: 1px solid #00ffff;
+  }
+
+  #mobile-nav-wrap .hide:before {
+    font: 28px/1.9em 'Montserrat', sans-serif;
+    color: #00ffff;
+    margin: 0px;
+    margin-right: 12px;
+    margin-top: 4px;
+    right: 0;
+    position: fixed;
+    content: '\2715';
+    z-index: 500;
+  }
+
+  #mobile-nav {
+    width: 100%;
+    background: #121415;
+  }
+
+  #mobile-nav-wrap ul#mobile-nav {
+    height: auto;
+    clear: both;
+    width: auto;
+    float: right;
+    position: relative;
+    right: 0;
+    background: #121415;
+    width: 100%;
+  }
+
+  #mobile-nav-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background: #121415;
+    z-index: 400;
+  }
+
+  /* display menu panels */
+  #mobile-nav-wrap:target > ul#mobile-nav {
+    display: block;
+    padding: 30px 20px 48px 20px;
+    background: #121415;
+    margin: 0 30px;
+    clear: both;
+  }
+
+  ul#mobile-nav li {
+    display: block;
+    height: auto;
+    margin: 0 auto;
+    padding: 0 4%;
+    text-align: left;
+    border-bottom: 1px solid #2d2e34;
+    border-bottom-style: dotted;
+    text-transform: uppercase;
+  }
+
+  ul#mobile-nav li a {
+    display: block;
+    margin: 0;
+    padding: 0;
+    margin: 12px 0;
+    line-height: 16px; /* reset line-height from 48px */
+    border: none;
+    text-align: center;
+  }
+  ul#mobile-nav li a:hover {
+    transition: none;
+    color: #a8a8a8;
+  }
+
+  ul#nav {
+    display: none;
+  }
+
+  .mobile-nav-open {
+    width: 100%;
+    background: #121415;
+    top: 0;
+  }
+
+  /*----------------------------------------------*/
+  /*	Skill Bars
+/*----------------------------------------------*/
+
+  .skills-section {
+    display: flex;
+    justify-content: center;
+    /* padding: 0 20px; */
+    padding-right: 0px;
+    width: 80%;
+    float: none;
+    margin: 0 auto;
+  }
+
+  .skills {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0 auto;
+  }
+
+  .single-skill {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    flex: 1 1 80px;
+    max-width: 80px;
+    margin-bottom: 40px;
+    font: 12px/1.9em 'Montserrat', sans-serif;
+  }
+
+  .single-skill img {
+    width: 40%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  #resume {
+    padding: 20px;
+  }
+  #resume .header-col {
+    padding-top: 0;
+    margin-bottom: 38px;
+    text-align: center;
+  }
+
+  #resume h1 {
+    letter-spacing: 3px;
+    font: 14px/1em 'Montserrat', sans-serif;
+  }
+  #resume .main-col {
+    padding-right: 30px;
+  }
+  #resume h3,
+  #resume .info {
+    text-align: center;
+  }
+  #resume h3 {
+    font: 25px/1.2em 'Montserrat', sans-serif;
+  }
+  #resume .info {
+    font: 14px/1.2em 'Montserrat', sans-serif;
+  }
+  #resume p {
+    font: 12px/1.4em 'Montserrat', sans-serif;
+    font-weight: 300;
+    text-align: center;
+  }
+
+  .bars {
+    width: 100%;
+  }
+
+  #portfolio .row h1 {
+    margin-bottom: 3px;
+    font: 12px/1.4em 'Montserrat', sans-serif;
+  }
+
+  #portfolio-wrapper {
+    margin-bottom: 6px;
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  #about {
+    padding: 20px;
+  }
+  #about .social {
+    width: 100%;
   }
 }
