--- a/docs/css/layout.css
+++ b/docs/css/layout.css
@@ -217,6 +217,12 @@ ul#nav li.current a {
   color: #fff;
   margin-bottom: 12px;
 }
+.contact-info {
+  display: flex;
+  justify-items: center;
+  flex-direction: column;
+  margin-top: 3%;
+}
 #about p {
   line-height: 30px;
   color: #646567;
@@ -225,10 +231,10 @@ ul#nav li.current a {
 }
 #about .profile-pic {
   position: relative;
-  width: 120px;
-  height: 120px;
-  border-radius: 100%;
+  width: auto;
+  height: 140px;
   margin: 20px;
+  margin-right: 30px;
 }
 
 #about .download .button {
